--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: wmts
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Read imagery from WebMap Tile Servers
+Version: 0.0.1
 Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+    c(person("Michael", "Sumner", email = "mdsumner@gmail.com", role = c("aut", "cre")))
+Description: Read imagery rasters from 'WMTS' ('WebMap Tile Servers') by setting
+ a spatial extent.  Zoom level (resolution) is determined automatically for a 
+ reasonable sized image at native detail, and can be controlled manually. 
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
+Imports: 
+    slippymath,
+    raster,
+    spex
